feat: add login & logout toast

--- a/src/app/core/pages/register/register.component.html
+++ b/src/app/core/pages/register/register.component.html
@@ -1,4 +1,4 @@
-<main class="mt-8 pt-1 mx-4">
+<main class="min-h-screen pt-8">
   <p-card styleClass="m-auto w-full md:w-30rem my-0">
     <ng-template pTemplate="title">
       <h1 class="m-0 mb-2 text-3xl text-center">Fazer cadastro</h1>
