--- a/src/app/core/pages/register/register.component.scss
+++ b/src/app/core/pages/register/register.component.scss
@@ -1,9 +1,6 @@
-input[type="number"] {
-  --moz-appearance: textfield; 
+:host {
+  main {
+    background-color: #222;
+  }
 }
 
-input[type="number"]::-webkit-inner-spin-button,
-input[type="number"]::-webkit-outer-spin-button {
-  -webkit-appearance: none;
-  margin: 0;
-}
