feat: configure routing

--- a/src/app/core/components/layout/layout.component.html
+++ b/src/app/core/components/layout/layout.component.html
@@ -23,7 +23,7 @@
       label="Meus contatos"
       icon="pi pi-user"
       severity="info"
-      (click)="onClickMenu()"
+      (click)="navigateMyContactsScreen()"
       styleClass="w-full"
     ></p-button>
     @for(actionButton of actionButtons; track actionButton.label) {
