refactor: replace label text

--- a/src/app/core/pages/my-contacts/add-contact/add-contact.component.html
+++ b/src/app/core/pages/my-contacts/add-contact/add-contact.component.html
@@ -15,7 +15,7 @@
 
     <fieldset class="field col-12 m-0 p-0">
       <legend>
-        <label for="platform" class="block mb-1">Platform</label>
+        <label for="platform" class="block mb-1">Plataforma</label>
       </legend>
       <form [formGroup]="formGroup">
         <p-treeSelect class="md:w-20rem w-full" containerStyleClass="w-full" formControlName="selectedNodes" [options]="nodes" placeholder="Selecione a plataforma" id="platform"></p-treeSelect>
