feat: if no-connection go to no-connection page

--- a/src/app/core/components/layout/layout.component.html
+++ b/src/app/core/components/layout/layout.component.html
@@ -25,6 +25,7 @@
       severity="info"
       (click)="onClickMenu()"
       styleClass="w-full"
+      routerLink="/login"
     ></p-button>
     @for(actionButton of actionButtons; track actionButton.label) {
     <p-button
