--- a/src/app/core/pages/my-profile/my-profile.component.html
+++ b/src/app/core/pages/my-profile/my-profile.component.html
@@ -1,10 +1,67 @@
-<div class="form ml-5">
+<div
+  class="form mx-5"
+  [formGroup]="profile"
+>
   <h2>Minha Conta</h2>
 
-  <input
-    type="text"
-    pInputText
-    placeholder="Nome"
-    class="w-full"
-  />
+  <fieldset class="field col-12 mb-4 px-0">
+    <legend>
+      <label for="email">Nome</label>
+    </legend>
+
+    <input
+      pInputText
+      type="text"
+      placeholder="Digite seu nome"
+      id="nome"
+      formControlName="nome"
+      class="w-full"
+    />
+  </fieldset>
+
+  <div class="grid mb-3">
+    <fieldset class="field col-12 mb-3 md:col-6 mb-0">
+      <legend>
+        <label for="email">Email</label>
+      </legend>
+
+      <input
+        pInputText
+        type="email"
+        placeholder="Digite seu email"
+        id="email"
+        formControlName="email"
+        class="w-full"
+      />
+    </fieldset>
+
+    <fieldset class="field col-12 md:col-6 mb-0 pl-2">
+      <legend>
+        <label for="email">Telefone</label>
+      </legend>
+
+      <input
+        pInputText
+        type="text"
+        phoneMask
+        placeholder="Digite seu telefone"
+        id="telefone"
+        formControlName="telefone"
+        class="w-full"
+      />
+    </fieldset>
+  </div>
+
+  <div class="flex md:flex-row flex-column justify-content-end gap-2 p-0">
+    <p-button
+      label="Trocar senha"
+      [text]="true"
+      styleClass="w-full md:w-auto"
+    ></p-button>
+    <p-button
+      label="Salvar"
+      styleClass="w-full md:w-auto"
+      (onClick)="handleSubmit()"
+    ></p-button>
+  </div>
 </div>
