--- a/src/app/core/pages/my-contacts/add-contact/add-contact.component.html
+++ b/src/app/core/pages/my-contacts/add-contact/add-contact.component.html
@@ -1,7 +1,7 @@
 <section>
   <h2 class="text-3xl text-center">Adicionar novo contato</h2>
 
-  <form [formGroup]="contact" class="flex flex-column gap-3">
+  <form [formGroup]="indentifier" class="flex flex-column gap-3">
 
     <fieldset class="field col-12 m-0 p-0">
       <legend>
@@ -18,6 +18,20 @@
 
     <fieldset class="field col-12 m-0 p-0">
       <legend>
+        <label for="platform" class="block mb-1">Plataforma</label>
+      </legend>
+      <p-dropdown styleClass="flex" formControlName="platform" [options]="platforms" optionLabel="name" optionValue="name" placeholder="Selecione a plataforma">
+        <ng-template let-platform pTemplate="item">
+          <div class="flex align-items-center gap-2">
+              <span class=""><i [class]="platform.icon"></i></span>
+              <div>{{ platform.name }}</div>
+          </div>
+      </ng-template>
+      </p-dropdown>
+    </fieldset>
+
+    <fieldset class="field col-12 m-0 p-0">
+      <legend>
         <label for="email" class="block mb-1">Email</label>
       </legend>
       <span class="p-input-icon-right w-full">
@@ -28,15 +42,6 @@
         <small class="text-red-600" *ngIf="getInputError('email', 'required')">Campo obrigatório</small>
         <small class="text-red-600" *ngIf="getInputError('email', 'email')">Digite um email válido</small>
       </div>
-    </fieldset>
-
-    <fieldset class="field col-12 m-0 p-0">
-      <legend>
-        <label for="platform" class="block mb-1">Plataforma</label>
-      </legend>
-      <form [formGroup]="formGroup">
-        <p-treeSelect class="md:w-20rem w-full" containerStyleClass="w-full" formControlName="selectedNodes" [options]="nodes" placeholder="Selecione a plataforma" id="platform"></p-treeSelect>
-      </form>
     </fieldset>
 
     <fieldset class="field col-12 m-0 p-0">
