styles: center text and fix responsive form

--- a/src/app/core/pages/my-contacts/add-contact/add-contact.component.html
+++ b/src/app/core/pages/my-contacts/add-contact/add-contact.component.html
@@ -1,7 +1,7 @@
-<section>
+<section class="flex flex-column align-items-center max-w-30rem mx-auto md:p-1">
   <h2 class="text-3xl text-center">Adicionar novo contato</h2>
 
-  <form [formGroup]="indentifier" class="flex flex-column gap-3">
+  <form [formGroup]="indentifier" class="flex flex-column justify-content-center gap-3 w-full">
 
     <fieldset class="field col-12 m-0 p-0">
       <legend>
