--- a/src/app/core/pages/my-contacts/my-contacts.component.html
+++ b/src/app/core/pages/my-contacts/my-contacts.component.html
@@ -2,6 +2,6 @@
   <h1 class="text-center text-3xl">Meus Contatos</h1>
 
   <div>
-    <p class="font-medium">Nenhum contato, <a routerLink="/my-contacts/add" class="text-blue-800">clique aqui</a> para criar um novo contato</p>
+    <p class="font-medium text-center text-lg">Nenhum contato, <a routerLink="/my-contacts/add" class="text-blue-800">clique aqui</a> para criar um novo contato</p>
   </div>
 </section>
