feat: change password

--- a/src/app/core/pages/change-password/change-password.component.html
+++ b/src/app/core/pages/change-password/change-password.component.html
@@ -1,1 +1,68 @@
-<p>change-password works!</p>
+<div
+  class="form mx-5"
+  [formGroup]="password"
+>
+  <h2>Trocar Senha</h2>
+
+  <fieldset class="field col-12 mb-3 px-0">
+    <legend>
+      <label for="currentPassword">Senha Atual</label>
+    </legend>
+
+    <input
+      pInputText
+      type="password"
+      placeholder="Digite a senha atual"
+      id="currentPassword"
+      formControlName="currentPassword"
+      class="w-full"
+    />
+  </fieldset>
+
+  <fieldset class="field col-12 mb-3 px-0">
+    <legend>
+      <label for="newPassword">Nova Senha</label>
+    </legend>
+
+    <input
+      pInputText
+      type="password"
+      placeholder="Digite sua nova senha"
+      id="newPassword"
+      formControlName="newPassword"
+      class="w-full"
+    />
+  </fieldset>
+
+  <fieldset class="field col-12 mb-3 px-0">
+    <legend>
+      <label for="confirmPassword">Confirmação de Senha</label>
+    </legend>
+
+    <input
+      pInputText
+      type="password"
+      placeholder="Digite sua senha novamente"
+      id="confirmPassword"
+      formControlName="confirmPassword"
+      class="w-full"
+    />
+  </fieldset>
+
+  <div class="flex md:flex-row flex-column justify-content-between p-0">
+    <p-button
+      label="Voltar"
+      styleClass="w-full md:w-auto"
+      [text]="true"
+      icon="pi pi-arrow-circle-left"
+      (click)="goBack()"
+    ></p-button>
+
+    <p-button
+      label="Salvar"
+      [disabled]="password.invalid"
+      styleClass="w-full md:w-auto"
+      icon="pi pi-save"
+    ></p-button>
+  </div>
+</div>
