--- a/src/app/core/pages/my-contacts/my-contacts.component.html
+++ b/src/app/core/pages/my-contacts/my-contacts.component.html
@@ -2,6 +2,27 @@
   <h1 class="text-center text-3xl">Meus Contatos</h1>
 
   <div>
+    <ul class="p-2 flex flex-column gap-2">
+      @for (contact of myContacts; track $index) {
+      <li>
+        <p-chip styleClass="pl-0 pr-3 py-2 w-full pl-2 flex justify-content-between">
+          <div class="flex gap-1">
+            <span class="bg-primary border-circle w-2rem h-2rem flex align-items-center justify-content-center uppercase font-bold">{{contact.name[0]}}</span>
+            <div class="flex flex-column">
+              <span class="ml-2 font-medium text-lg capitalize">{{contact.name}}</span>
+              <span class="ml-2 text-base opacity-80">{{contact.identify}}</span>
+            </div>
+          </div>
+          <div class="flex gap-2">
+            <p-button icon="pi pi-user-edit" class="w-2rem" [rounded]="true" [text]="true" severity="info "></p-button>
+            <p-button icon="pi pi-times" class="w-2rem" [rounded]="true" [text]="true" severity="danger "></p-button>
+          </div>
+        </p-chip>
+      </li>
+      }
+    </ul>
+    @if (myContacts.length == 0) {
     <p class="font-medium text-center text-lg">Nenhum contato, <a routerLink="/my-contacts/add" class="text-blue-800">clique aqui</a> para criar um novo contato</p>
+    }
   </div>
 </section>
