--- a/src/app/core/pages/my-contacts/add-contact/add-contact.component.html
+++ b/src/app/core/pages/my-contacts/add-contact/add-contact.component.html
@@ -1,7 +1,7 @@
-<section class="flex flex-column align-items-center max-w-30rem mx-auto md:p-1">
+<section class="flex flex-column align-items-center max-w-30rem mx-auto md:p-1 pt-5">
   <h2 class="text-3xl text-center">Adicionar novo contato</h2>
 
-  <form [formGroup]="indentifier" class="flex flex-column justify-content-center gap-3 w-full">
+  <form [formGroup]="indentifier" (ngSubmit)="onSubmit()" class="flex flex-column justify-content-center gap-3 w-full pt-4">
 
     <fieldset class="field col-12 m-0 p-0">
       <legend>
@@ -23,40 +23,29 @@
       <p-dropdown styleClass="flex" formControlName="platform" [options]="platforms" optionLabel="name" optionValue="name" placeholder="Selecione a plataforma">
         <ng-template let-platform pTemplate="item">
           <div class="flex align-items-center gap-2">
-              <span class=""><i [class]="platform.icon"></i></span>
-              <div>{{ platform.name }}</div>
+            <span class=""><i [class]="platform.icon"></i></span>
+            <div>{{ platform.name }}</div>
           </div>
-      </ng-template>
+        </ng-template>
       </p-dropdown>
     </fieldset>
 
     <fieldset class="field col-12 m-0 p-0">
       <legend>
-        <label for="email" class="block mb-1">Email</label>
+        <label for="identifiy" class="block mb-1">Identificador</label>
       </legend>
       <span class="p-input-icon-right w-full">
         <i class="pi pi-envelope"></i>
-        <input type="text" class="w-full" pInputText formControlName="email" placeholder="Digite o email" id="email" [ngClass]="{ 'ng-invalid ng-dirty': inputInvalid('email') }" />
+        <input type="text" class="w-full" pInputText formControlName="identifiy" placeholder="Digite o identificador" id="identifiy" [ngClass]="{ 'ng-invalid ng-dirty': inputInvalid('identifiy') }" />
       </span>
-      <div *ngIf="inputInvalid('email')">
-        <small class="text-red-600" *ngIf="getInputError('email', 'required')">Campo obrigatório</small>
-        <small class="text-red-600" *ngIf="getInputError('email', 'email')">Digite um email válido</small>
+      <div *ngIf="inputInvalid('identifiy')">
+        <small class="text-red-600" *ngIf="getInputError('identifiy', 'required')">Campo obrigatório</small>
       </div>
     </fieldset>
 
-    <fieldset class="field col-12 m-0 p-0">
-      <legend>
-        <label for="phone" class="block mb-1">Phone</label>
-      </legend>
-      <span class="p-input-icon-right w-full">
-        <i class="pi pi-phone"></i>
-        <p-inputMask [style.width]="'100%'" styleClass="w-full" inputId="phone" formControlName="phone" mask="(99) 99999-9999" placeholder="(99) 99999-9999" [unmask]="true" [autoClear]="false" [ngClass]="{ 'ng-invalid ng-dirty': inputInvalid('phone') }"></p-inputMask>
-      </span>
-      <div *ngIf="inputInvalid('phone')">
-        <small class="text-red-600" *ngIf="getInputError('phone', 'required')">Campo obrigatório</small>
-        <small class="text-red-600" *ngIf="getInputError('phone', 'phone')">Digite um telefone válido</small>
-      </div>
-    </fieldset>
+    <div class="card flex justify-content-center gap-3">
+      <p-button type="submit" class="w-full" label="Adicionar contato"></p-button>
+    </div>
 
   </form>
 </section>
