feat: make number required and fix mask input phone

--- a/src/app/core/pages/register/register.component.html
+++ b/src/app/core/pages/register/register.component.html
@@ -108,8 +108,8 @@
             styleClass="w-full"
             inputId="phone"
             formControlName="phone"
-            mask="(99) 9?999-99999"
-            placeholder="(99) 9?999-99999"
+            mask="(99) 9999-9999"
+            placeholder="(99) 9999-9999"
             [unmask]="true"
             [autoClear]="false"
             [ngClass]="{ 'ng-invalid ng-dirty': inputInvalid('phone') }"
