refactor: refactor identifiy

--- a/src/app/core/pages/my-contacts/my-contacts.component.html
+++ b/src/app/core/pages/my-contacts/my-contacts.component.html
@@ -10,7 +10,7 @@
             <span class="bg-primary border-circle w-2rem h-2rem flex align-items-center justify-content-center uppercase font-bold">{{contact.name[0]}}</span>
             <div class="flex flex-column">
               <span class="ml-2 font-medium text-lg capitalize">{{contact.name}}</span>
-              <span class="ml-2 text-base opacity-80">{{contact.identify}}</span>
+              <span class="ml-2 text-base opacity-80">{{contact.identifiy}}</span>
             </div>
           </div>
           <div class="flex gap-2">
