feat: user service

--- a/src/app/core/pages/my-profile/my-profile.component.html
+++ b/src/app/core/pages/my-profile/my-profile.component.html
@@ -6,15 +6,15 @@
 
   <fieldset class="field col-12 mb-4 px-0">
     <legend>
-      <label for="email">Nome</label>
+      <label for="name">Nome</label>
     </legend>
 
     <input
       pInputText
       type="text"
       placeholder="Digite seu nome"
-      id="nome"
-      formControlName="nome"
+      id="name"
+      formControlName="name"
       class="w-full"
     />
   </fieldset>
@@ -37,7 +37,7 @@
 
     <fieldset class="field col-12 md:col-6 mb-0 pl-2">
       <legend>
-        <label for="email">Telefone</label>
+        <label for="phone">Telefone</label>
       </legend>
 
       <input
@@ -45,8 +45,8 @@
         type="text"
         phoneMask
         placeholder="Digite seu telefone"
-        id="telefone"
-        formControlName="telefone"
+        id="phone"
+        formControlName="phone"
         class="w-full"
       />
     </fieldset>
