style: sidebar menu

--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,5 +1,5 @@
 /* You can add global styles to this file, and also import other style files */
-@import 'primeng/resources/themes/lara-light-blue/theme.css';
+@import 'primeng/resources/themes/lara-light-cyan/theme.css';
 @import 'primeng/resources/primeng.css';
 @import 'primeflex/primeflex.css';
 @import 'primeicons/primeicons.css';
@@ -9,6 +9,7 @@
 :root {
   --primary-color: #00a6cb;
   --secondary-color: #53c2b3;
+  --dark-color: #003459;
   --black-color: #1e1e1e;
   --white-color: #fffbf8;
 }
