--- a/src/app/core/components/layout/layout.component.html
+++ b/src/app/core/components/layout/layout.component.html
@@ -1,50 +1,58 @@
 <p-sidebar
   [(visible)]="isSidebarOpen"
-  [position]="isMobile ? 'bottom' : 'left'"
   [modal]="isMobile"
   [closeOnEscape]="false"
-  [showCloseIcon]="isMobile"
+  [showCloseIcon]="false"
   [blockScroll]="true"
-  [ngClass]="{ 'h-full': !isMobile }"
 >
   <ng-template pTemplate="header">
     <img
-      *ngIf="!isMobile"
       src="/assets/logo.svg"
       alt="GoLembrar logo"
-      width="200"
+      width="180"
+      routerLink="/"
+      (click)="onClickMenuOption()"
     />
+
+    <p-button
+      label="Novo lembrete"
+      icon="pi pi-plus-circle"
+      [outlined]="true"
+      routerLink="/reminders/new"
+      (click)="onClickMenuOption()"
+    ></p-button>
   </ng-template>
-  <div
-    id="action-buttons"
-    class="flex mt-1 flex-wrap mx-auto gap-2 align-items-center justify-content-center"
-  >
+
+  <ng-template pTemplate="content">
+    <p-button
+    cla
+      label="Hoje"
+      icon="pi pi-calendar"
+      [outlined]="true"
+      routerLink="/reminders/new"
+      (click)="onClickMenuOption()"
+    ></p-button>
+    <p-button
+      label="Agendados"
+      icon="pi pi-clock"
+      [outlined]="true"
+      routerLink="/reminders/new"
+      (click)="onClickMenuOption()"
+    ></p-button>
     <p-button
       label="Meus contatos"
-      icon="pi pi-user"
-      severity="info"
-      styleClass="w-full"
-      routerLink="my-contacts"
+      icon="pi pi-users"
+      [outlined]="true"
+      routerLink="/reminders/new"
+      (click)="onClickMenuOption()"
     ></p-button>
-    @for(actionButton of actionButtons; track actionButton.label) {
-    <p-button
-      [label]="actionButton.label"
-      [icon]="actionButton.icon"
-      [outlined]="actionButton.outlined"
-      [severity]="actionButton.severity"
-      styleClass="w-10rem"
-      (click)="onClickMenu()"
-    ></p-button>
-    }
-  </div>
+  </ng-template>
   <ng-template pTemplate="footer">
     <p-button
-      *ngIf="!isMobile"
       label="Configurações"
       icon=" pi pi-cog"
-      severity="secondary"
       [outlined]="true"
-      styleClass="flex gap-2 no-underline w-full text-left justify-content-center"
+      (click)="onClickMenuOption()"
     ></p-button>
   </ng-template>
 </p-sidebar>
@@ -55,20 +63,11 @@
   class="p-2"
 >
   <header class="flex justify-content-between align-items-center px-2">
-    @if(!isMobile){
     <p-button
       (click)="toggleSidebar()"
-      [icon]="isSidebarOpen ? 'pi pi-chevron-left' : 'pi pi-chevron-right'"
+      icon="pi pi-bars"
       [outlined]="true"
     ></p-button>
-    } @if(isMobile){
-    <p-button
-      (click)="toggleSidebar()"
-      icon="pi pi-plus"
-      label="GO"
-      styleClass="absolute bottom-0 right-0 m-4"
-    ></p-button>
-    }
     <div class="profile cursor-pointer align-items-end">
       <p-menu
         #menu
