feat: add decoration in body tag

--- a/src/app/core/components/layout/layout.component.html
+++ b/src/app/core/components/layout/layout.component.html
@@ -25,7 +25,7 @@
 
   <ng-template pTemplate="content">
     <p-button
-    cla
+      cla
       label="Hoje"
       icon="pi pi-calendar"
       [outlined]="true"
@@ -43,10 +43,11 @@
       label="Meus contatos"
       icon="pi pi-users"
       [outlined]="true"
-      routerLink="/reminders/new"
+      routerLink="/my-contacts"
       (click)="onClickMenuOption()"
     ></p-button>
   </ng-template>
+
   <ng-template pTemplate="footer">
     <p-button
       label="Configurações"
