--- a/src/styles.scss
+++ b/src/styles.scss
@@ -14,8 +14,28 @@
   --white-color: #fffbf8;
 }
 
+html,
+body {
+  height: 100%;
+}
+
 body {
   margin: 0;
+}
+
+body::before {
+  content: '';
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-image: url('/assets/bg-decoration.svg');
+  background-repeat: no-repeat;
+  background-size: contain;
+  background-position: top right -140px;
+  z-index: -9999;
+  filter: opacity(32%);
 }
 
 fieldset {
