fix: login logo on mobile

--- a/src/app/core/pages/my-contacts/my-contacts.component.html
+++ b/src/app/core/pages/my-contacts/my-contacts.component.html
@@ -1,6 +1,8 @@
 <section>
   <div class="flex gap-4 align-items-center justify-content-between">
-    <h1 class="text-3xl">Meus Contatos</h1>
+    <h1 class="text-3xl font-normal">
+      <strong class="text-cyan-600">Meus</strong>
+      Contatos</h1>
     <p-button icon="pi pi-plus" (onClick)="addContact()" />
   </div>
   <div>
