--- a/src/app/core/pages/user-account/login/login.component.html
+++ b/src/app/core/pages/user-account/login/login.component.html
@@ -7,7 +7,7 @@
   </div>
   <div class="right-container">
     <img
-      src="/assets/logo.svg"
+      src="/assets/logo-dark.svg"
       width="300"
     />
     <p-card styleClass="m-auto w-12 lg:w-30rem my-0">
