--- a/src/app/core/pages/my-contacts/my-contacts.component.html
+++ b/src/app/core/pages/my-contacts/my-contacts.component.html
@@ -1,79 +1,77 @@
-<section>
-  <div class="flex gap-4 align-items-center justify-content-between">
-    <h2 class="text-3xl font-normal">
-      <strong class="text-cyan-600">Meus </strong>Contatos
-    </h2>
-  </div>
-  <div class="flex justify-content-between align-items-center px-2">
-    <p-button
-      icon="pi pi-plus"
-      label="Novo contato"
-      size="small"
-      routerLink="/my-contacts/add"
-    ></p-button>
+<div class="flex gap-4 align-items-center justify-content-between">
+  <h2 class="text-3xl font-normal">
+    <strong class="text-cyan-600">Meus </strong>Contatos
+  </h2>
+</div>
+<div class="flex justify-content-between align-items-center">
+  <p-button
+    icon="pi pi-plus"
+    label="Novo contato"
+    size="small"
+    routerLink="/my-contacts/add"
+  ></p-button>
 
-    <div>
-      <p-tieredMenu
-        #menu
-        [model]="avatarMenu"
-        [popup]="true"
-        styleClass="mt-3"
-      ></p-tieredMenu>
-      <p-button
-        styleClass="bg-white px-4"
-        icon="pi pi-filter"
-        label="Filtrar canais"
-        size="small"
-        severity="secondary"
-        [outlined]="true"
-        (onClick)="menu.toggle($event)"
-      >
-      </p-button>
-    </div>
-  </div>
   <div>
-    @if((myContacts$ | async)?.length == 0) {
-    <p class="text-center block mt-4">Nenhum contato cadastrado</p>
-    }
-    <ul class="p-2 flex flex-column gap-2">
-      @for (contact of myContacts$ | async; track $index) {
-      <li class="flex justify-content-between align-items-center">
-        <div class="flex align-items-center gap-1">
-          <p-avatar
-            [label]="contact.name[0]"
-            shape="circle"
-          />
-          <div class="flex flex-column">
-            <span class="ml-2 font-medium text-lg capitalize">{{
-              contact.name
-            }}</span>
-            <span class="ml-2 text-base opacity-80">{{
-              contact.identify
-            }}</span>
-          </div>
-        </div>
-
-        <div class="text-cyan-600">
-          @switch (contact.platform) { @case ("EMAIL") {
-          <i class="pi pi-envelope"></i>
-          } @case ("WHATSAPP") {
-          <i class="pi pi-whatsapp"></i>
-          } @case ("TELEGRAM") {
-          <i class="pi pi-telegram"></i>
-          } @case ("DISCORD") {
-          <i class="pi pi-discord"></i>
-          } }
-        </div>
-        <p-button
-          icon="pi pi-chevron-right"
-          class="w-2rem justify-content-end"
-          [rounded]="true"
-          [text]="true"
-          severity="info"
-          (onClick)="editContact(contact)"
-        ></p-button>
-      </li>
-      }
-    </ul>
+    <p-tieredMenu
+      #menu
+      [model]="avatarMenu"
+      [popup]="true"
+      styleClass="mt-3"
+    ></p-tieredMenu>
+    <p-button
+      styleClass="bg-white px-4"
+      icon="pi pi-filter"
+      label="Filtrar canais"
+      size="small"
+      severity="secondary"
+      [outlined]="true"
+      (onClick)="menu.toggle($event)"
+    >
+    </p-button>
   </div>
-</section>
+</div>
+<div>
+  @if((myContacts$ | async)?.length == 0) {
+  <p class="text-center block mt-4">Nenhum contato cadastrado</p>
+  }
+  <ul class="px-0 flex flex-column gap-2">
+    @for (contact of myContacts$ | async; track $index) {
+    <li
+      class="flex justify-content-between align-items-center pl-3 pr-5 py-2 bg-white shadow-1 border-round-xl"
+    >
+      <div class="flex align-items-center gap-1">
+        <p-avatar
+          [label]="contact.name[0]"
+          shape="circle"
+        />
+        <div class="flex flex-column">
+          <span class="ml-2 font-medium text-lg capitalize">{{
+            contact.name
+          }}</span>
+          <span class="ml-2 text-base opacity-80">{{ contact.identify }}</span>
+        </div>
+      </div>
+
+      <div class="text-cyan-600 mr-6">
+        @switch (contact.platform) { @case ("EMAIL") {
+        <i class="pi pi-envelope"></i>
+        } @case ("WHATSAPP") {
+        <i class="pi pi-whatsapp"></i>
+        } @case ("TELEGRAM") {
+        <i class="pi pi-telegram"></i>
+        } @case ("DISCORD") {
+        <i class="pi pi-discord"></i>
+        } }
+      </div>
+      <p-button
+        icon="pi pi-chevron-right"
+        class="w-2rem justify-content-end"
+        [rounded]="true"
+        [text]="true"
+        severity="info"
+        (onClick)="editContact(contact)"
+      ></p-button>
+    </li>
+    }
+  </ul>
+</div>
