--- a/src/app/core/pages/contacts/contacts.component.html
+++ b/src/app/core/pages/contacts/contacts.component.html
@@ -8,7 +8,7 @@
     icon="pi pi-plus"
     label="Novo contato"
     size="small"
-    routerLink="/my-contacts/add"
+    routerLink="add"
   ></p-button>
 
   <div>
