--- a/src/app/core/pages/user-account/login/login.component.html
+++ b/src/app/core/pages/user-account/login/login.component.html
@@ -54,7 +54,7 @@
 
         <a
           class="no-underline hover:underline text-blue-700 align-self-end"
-          routerLink="/login"
+          routerLink="#"
           >Esqueci minha senha?</a
         >
 
