--- a/src/app/styles/primeng.scss
+++ b/src/app/styles/primeng.scss
@@ -61,3 +61,11 @@ ul {
     }
   }
 }
+.p-dialog {
+  margin-left: 20px;
+  margin-right: 20px;
+}
+.p-dialog-header {
+  padding-top: 0;
+  padding-bottom: 0;
+}
