--- a/src/app/core/components/title/title.component.html
+++ b/src/app/core/components/title/title.component.html
@@ -1,5 +1,8 @@
 <div class="flex gap-4 align-items-center justify-content-between w-full">
-  <h2 class="text-3xl font-normal">
+  <h2
+    class="text-3xl font-normal"
+    [style]="{ color: 'var(--dark-color)' }"
+  >
     <strong class="text-cyan-600">{{ label1 }} </strong>{{ label2 }}
   </h2>
 </div>
