--- a/src/app/core/pages/contacts/contacts.component.html
+++ b/src/app/core/pages/contacts/contacts.component.html
@@ -1,3 +1,29 @@
+<p-dialog
+  [(visible)]="showEditContact"
+  [modal]="true"
+  [style]="{ maxWidth: '800px' }"
+  [draggable]="false"
+  [resizable]="false"
+>
+  <ng-template pTemplate="header">
+    <gl-title
+      label1="Editar"
+      label2="contato"
+    ></gl-title>
+  </ng-template>
+  <ng-template pTemplate="content">
+    <p class="m-0">
+      Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod
+      tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim
+      veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea
+      commodo consequat. Duis aute irure dolor in reprehenderit in voluptate
+      velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat
+      cupidatat non proident, sunt in culpa qui officia deserunt mollit anim id
+      est laborum.
+    </p>
+  </ng-template>
+</p-dialog>
+
 <gl-title
   label1="Meus"
   label2="contatos"
@@ -16,7 +42,7 @@
       #menu
       [model]="platforms"
       [popup]="true"
-      styleClass="mt-3"
+      styleClass="mt-3 w-2"
     ></p-menu>
     <p-button
       styleClass="bg-white px-4"
@@ -34,38 +60,39 @@
   @if((contacts$ | async)?.length == 0) {
   <p class="text-center block mt-4">Nenhum contato cadastrado</p>
   }
-  <ul class="px-0 flex flex-column gap-2">
-    @for (contact of contacts$ | async; track contact.id) {
+  <ul class="px-0 pt-2 flex flex-column gap-3">
+    @for (contact of contacts$ | async; track $index) {
     <li
-      class="flex justify-content-between align-items-center pl-3 pr-5 py-2 bg-white shadow-1 border-round-xl"
+      class="flex justify-content-between align-items-center px-3 py-2 bg-white shadow-1 border-round-xl"
     >
       <div class="flex align-items-center gap-1">
         <p-avatar
           [label]="contact.name[0]"
           shape="circle"
+          styleClass="mr-2"
         />
-        <div class="flex flex-column">
-          <span class="ml-2 font-medium text-lg capitalize">{{
-            contact.name
-          }}</span>
-          <span class="ml-2 text-base opacity-80">{{ contact.identify }}</span>
+        <div class="contact-name">
+          <p class="font-medium text-lg capitalize">
+            {{ contact.name }}
+          </p>
         </div>
       </div>
 
-      <div class="text-cyan-600 mr-6">
-        @switch (contact.platform) { @case ("EMAIL") {
-        <i class="pi pi-envelope"></i>
-        } @case ("WHATSAPP") {
-        <i class="pi pi-whatsapp"></i>
-        } @case ("TELEGRAM") {
-        <i class="pi pi-telegram"></i>
-        } @case ("DISCORD") {
-        <i class="pi pi-discord"></i>
-        } }
+      <div class="text-cyan-600 lg:mr-8 lg:pr-8">
+        <div class="lg:mr-3">
+          @switch (contact.platform) { @case ("EMAIL") {
+          <i class="pi pi-envelope"></i>
+          } @case ("WHATSAPP") {
+          <i class="pi pi-whatsapp"></i>
+          } @case ("TELEGRAM") {
+          <i class="pi pi-telegram"></i>
+          } @case ("DISCORD") {
+          <i class="pi pi-discord"></i>
+          } }
+        </div>
       </div>
       <p-button
-        icon="pi pi-chevron-right"
-        class="w-2rem justify-content-end"
+        icon="pi pi-pencil"
         [rounded]="true"
         [text]="true"
         severity="info"
