--- a/src/app/styles/primeng.scss
+++ b/src/app/styles/primeng.scss
@@ -62,10 +62,28 @@ ul {
   }
 }
 .p-dialog {
-  margin-left: 20px;
-  margin-right: 20px;
+  margin-left: 16px;
+  margin-right: 16px;
+  margin-bottom: 52px;
+  max-width: 520px;
+
+  .p-dialog-header {
+    padding-top: 0;
+    padding-bottom: 0;
+  }
+  .p-dialog-content {
+    padding: 24px;
+    padding-top: 0;
+
+    fieldset {
+      max-width: 400px;
+    }
+  }
+
+  .p-button .p-button-label {
+    text-decoration: none;
+  }
 }
-.p-dialog-header {
-  padding-top: 0;
-  padding-bottom: 0;
+.p-avatar {
+  background-color: #e4f3f7;
 }
