feat: edit contact finished

--- a/src/app/core/components/layout/layout.component.html
+++ b/src/app/core/components/layout/layout.component.html
@@ -1,3 +1,13 @@
+<p-confirmDialog
+  styleClass="w-11 md:w-4"
+  acceptLabel="Confirmar"
+  rejectLabel="Fechar"
+  icon="pi pi-exclamation-triangle"
+  rejectButtonStyleClass="p-button-small p-button-text p-button-danger mr-3"
+  acceptButtonStyleClass="p-button-small"
+  [style]="{ width: '80%' }"
+></p-confirmDialog>
+
 <p-sidebar
   [(visible)]="isSidebarOpen"
   [modal]="isMobile"
